[dyad] Atualizando a chave reCAPTCHA no arquivo .env.local - wrote 1 file(s) + extra files edited outside of Dyad

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_SUPABASE_URL="https://sozymmjdzjqaubuoocpz.supabase.co"
 VITE_SUPABASE_ANON_KEY="sb_publishable_0ggEK3wBnN2Zg0x1T4R_uA_gesnHmaN"
+VITE_RECAPTCHA_SITE_KEY="6LfbtssrAAAAACIaWTB2iOAvh1unsJRvk8Y7-Pkg"
